    + Remove now unneeded debian/dirs and dh_installdirs call
  * Use prename instead of double for loop to add freebsd man page suffix
    + Add build-dependency on perl
  * Use hardlink to deduplicate man pages with multiple names after
    dh_installman's recoding again.
    + Reduces package size by more than 60%
    + Add build-dependency on hardlink

 -- Axel Beckert <abe@debian.org>  Sat, 31 Aug 2013 00:47:15 +0200

freebsd-manpages (8.4-1) unstable; urgency=low
  
  * New upstream version.
  * No more use the split upstream tar ball sources but rebuilt that tar
    ball and use it as .orig.tar.gz
  * No more uncompress man pages. They should be fine as they are.
  * Clean up debian/rules
    + Remove unused code
    + No more clean up stamp files manually, dh_clean does that already
  * Remove no more needed build dependencies
  * Switch to source format "3.0 (quilt)"
  * Fixes the following lintian warnings:
    + copyright-without-copyright-notice
    + copyright-refers-to-deprecated-bsd-license-file
    + debian-rules-missing-recommended-target
    + no-homepage-field (Homepage set to http://www.freebsd.org/docproj/)
    + debian-watch-file-is-missing (Added fake watch file which downloads
      a directory index. This works perfect as link in the PTS. ;-)
  * Bump Standards-Version to 3.9.4 (no changes)
  * Add Vcs-* headers
  * Add myself to Uploaders

 -- Axel Beckert <abe@debian.org>  Sat, 31 Aug 2013 00:33:12 +0200

freebsd-manpages (8.2-1) unstable; urgency=low

  * New upstream version.
  * Bump standards version to 3.9.2.
  * Bump debhelper version to 8.

 -- Gürkan Sengün <gurkan@phys.ethz.ch>  Wed, 04 May 2011 12:06:02 +0200

freebsd-manpages (8.1-1) unstable; urgency=low

  * New upstream version.
  * Bump standards version to 3.9.1.

 -- Gürkan Sengün <gurkan@phys.ethz.ch>  Thu, 05 Aug 2010 12:17:52 +0200

freebsd-manpages (8.0-1) unstable; urgency=low

  * New upstream version.
