@@ -1,17 +1,26 @@
 #!/usr/bin/make -f
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
 DESTDIR=$(CURDIR)/debian/freebsd-manpages
 VER=9.1
 
-build: build-arch build-indep
-build-arch: build-stamp
-build-indep: build-stamp
+%:
+	dh $@
+
+override_dh_install:
+	dh_install
+	# Use i386 directory for architecture-dependent man pages
+	mv $(DESTDIR)/usr/share/man/man4/i386/* $(DESTDIR)/usr/share/man/man4/
+	rm -rf $(DESTDIR)/usr/share/man/man4/*/
+	prename -v 's/\.(\d)($|\.gz)/.$${1}freebsd$${2}/' $(DESTDIR)/usr/share/man/man*/*
+
+override_dh_installman:
+	dh_installman
+	hardlink -m -t $(DESTDIR)/usr/share/man
 
 # make -f debian/rules get-orig-source
-../base.txz:
-	cd ../;wget http://ftp.freebsd.org/pub/FreeBSD/releases/i386/$(VER)-RELEASE/base.txz
+get-orig-source: ../freebsd-manpages_$(VER).orig.tar.xz
 ../freebsd-manpages_$(VER).orig.tar.xz: ../base.txz
 	mkdir -pv debian/repack
 	# Ignore tar's exit code as both, BSD and GNU tar errors out
@@ -20,42 +29,5 @@ build-indep: build-stamp
 	cd debian/repack; tar xvJf ../../../base.txz ./usr/share/man/man2 ./usr/share/man/man3 ./usr/share/man/man4 ./usr/share/man/man9 || exit 0
 	cd debian/repack; tar cvJf ../../../freebsd-manpages_$(VER).orig.tar.xz ./usr/share/man
 	rm -rf debian/repack
-get-orig-source: ../freebsd-manpages_$(VER).orig.tar.xz
-
-build-stamp:
-	dh_testdir
-	touch build-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_prep
-	dh_install
-	# Use i386 directory for architecture-dependent man pages
-	mv $(DESTDIR)/usr/share/man/man4/i386/* $(DESTDIR)/usr/share/man/man4/
-	rm -rf $(DESTDIR)/usr/share/man/man4/*/
-	prename -v 's/\.(\d)($|\.gz)/.$${1}freebsd$${2}/' $(DESTDIR)/usr/share/man/man*/*
-
-binary-arch: build install
-
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs
-	dh_installdocs
-	dh_installman
-	hardlink -m -t $(DESTDIR)/usr/share/man
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
+../base.txz:
+	cd ../;wget http://ftp.freebsd.org/pub/FreeBSD/releases/i386/$(VER)-RELEASE/base.txz
